# Maze-and-caves

./: .gitignore  README.md
src/: CMakeLists.txt  Makefile  main.cc
src/controller/: controller.cc  controller.h
src/docs/: Doxyfile
src/model/: cave.cc  cave.h  cave_automaton.cc  cave_automaton.h  facade_model.h  maze.cc  maze.h  maze_generator.cc  maze_generator.h  maze_solve.cc  maze_solve.h  parsing_file.cc  parsing_file.h  parsing_maze_file.cc  parsing_maze_file.h
src/resources/incorrect files/: incorrect_data1.txt  incorrect_data3.txt  incorrect_first_line1.txt  incorrect_first_line3.txt  maze_incorrect1.txt  maze_incorrect_data2.txt  maze_incorrect_firs_line.txt  maze_incorrect_numbers_cols.txt  maze_incorrect_numbers_line.txt  maze_incorrect_rows.txt
src/resources/incorrect files/Cave/: incorrect_amount_lines1.txt  incorrect_amount_lines2.txt  incorrect_first_line1.txt  incorrect_first_line2.txt  incorrect_first_line3.txt  incorrect_value.txt  incorrect_value1.txt
src/resources/incorrect files/Maze/: incorrect_cols.txt  incorrect_first_line2.txt  incorrect_numbers_cols.txt  incorrect_numbers_line2.txt  maze_incorrect_number_rows.txt
src/tests/: cave_tests.cc  maze_solve_tests.cc  maze_tests.cc  tests_main.cc
src/view/: paint_window.cc  paint_window.h  view.cc  view.h  view.ui
